--- a/index.html
+++ b/index.html
@@ -31,22 +31,12 @@
             <h2 class="trendingPreview-title">Tendencias</h2>
             <button class="trendingPreview-btn">Ver más</button>
         </div>
-        <article class="trendingPreview-movieList">
-            <div class="movie-container">
+        <article id="trendingPreview-movieList" class="trendingPreview-movieList">
+            <!-- <div class="movie-container">
                 <img src="https://image.tmdb.org/t/p/w300/adOzdWS35KAo21r9R4BuFCkLer6.jpg" 
                     class="movie-img"
                     alt="Nombre de la película" />
-            </div>
-            <div class="movie-container">
-                <img src="https://image.tmdb.org/t/p/w300/adOzdWS35KAo21r9R4BuFCkLer6.jpg" 
-                    class="movie-img"
-                    alt="Nombre de la película" />
-            </div>
-            <div class="movie-container">
-                <img src="https://image.tmdb.org/t/p/w300/adOzdWS35KAo21r9R4BuFCkLer6.jpg" 
-                    class="movie-img"
-                    alt="Nombre de la película" />
-            </div>
+            </div> -->
         </article>
     </section>
 
