--- a/index.html
+++ b/index.html
@@ -103,6 +103,7 @@
         </article>
     </section>
 </body>
+<script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
 <script src="./src/secrets.js"></script>
 <script src="./src/main.js"></script>
 </html>
