--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
         <form id="searchForm" class="header-searchForm">
             <input type="text" placeholder="Vengadores" />
-            <button>🔍</button>
+            <button id="searchBtn">🔍</button>
         </form>
     </header>
 
@@ -105,5 +105,7 @@
 </body>
 <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
 <script src="./src/secrets.js"></script>
+<script src="./src/nodes.js"></script>
 <script src="./src/main.js"></script>
+<script src="./src/navigation.js"></script>
 </html>
