--- a/index.html
+++ b/index.html
@@ -32,6 +32,9 @@
             <button class="trendingPreview-btn">Ver más</button>
         </div>
         <article id="trendingPreview-movieList" class="trendingPreview-movieList">
+            <div class="movie-container movie-container--loading"></div>
+            <div class="movie-container movie-container--loading"></div>
+            <div class="movie-container movie-container--loading"></div>
             <!-- <div class="movie-container">
                 <img src="https://image.tmdb.org/t/p/w300/adOzdWS35KAo21r9R4BuFCkLer6.jpg" 
                     class="movie-img"
@@ -43,9 +46,12 @@
     <section id="categoriesPreview" class="categoriesPreview-container">
         <h2 class="categoriesPreview-title">Categorías</h2>
         <article class="categoriesPreview-list">
-            <!-- <div class="category-container">
-                <h3 id="id28" class="category-title">Romance</h3>
-            </div> -->
+        <div class="category-container category-container--loading"></div>
+        <div class="category-container category-container--loading"></div>
+        <div class="category-container category-container--loading"></div>
+        <!-- <div class="category-container">
+            <h3 id="id28" class="category-title">Romance</h3>
+        </div> -->
         </article>
     </section>
 
@@ -84,7 +90,10 @@
         <article class="relatedMovies-container">
             <h2 class="relatedMovies-title">Películas similares</h2>
             <div class="relatedMovies-scrollContainer">
-                <div class="movie-container">
+                <div class="movie-container movie-container--loading"></div>
+                <div class="movie-container movie-container--loading"></div>
+                <div class="movie-container movie-container--loading"></div>
+                <!-- <div class="movie-container">
                     <img src="https://image.tmdb.org/t/p/w300/adOzdWS35KAo21r9R4BuFCkLer6.jpg" 
                         class="movie-img"
                         alt="Nombre de la película" />
@@ -98,7 +107,7 @@
                     <img src="https://image.tmdb.org/t/p/w300/adOzdWS35KAo21r9R4BuFCkLer6.jpg" 
                         class="movie-img"
                         alt="Nombre de la película" />
-                </div>
+                </div> -->
             </div>
         </article>
     </section>
